--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,4 +44,13 @@
         android:padding="10dp"
         android:layout_margin="10dp"/>
 
-</LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_viewSegment"
+        android:layout_below="@+id/frameLayout"
+        android:background="@android:color/transparent"
+        android:layout_alignStart="@+id/frameLayout"
+        android:layout_alignEnd="@+id/frameLayout"
+        />
+</RelativeLayout>
