--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -13,28 +13,7 @@
         android:id="@+id/bill_title"
         android:textSize="25sp"
         android:textStyle="bold"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp"
-        android:background="@color/cardview_light_background">
-        
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/folhas"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:text="Texto original"/>
-        
-    </LinearLayout>
-    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,13 +21,17 @@
         android:textSize="20sp"
         android:background="@color/cardview_light_background"
         android:padding="10dp"
-        android:layout_margin="10dp"/>
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentStart="true"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/recycler_viewSegment"
-        android:layout_below="@+id/frameLayout"
         android:background="@android:color/transparent"
         android:layout_alignStart="@+id/frameLayout"
         android:layout_alignEnd="@+id/frameLayout"
