--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -7,33 +7,51 @@
     android:background="@drawable/background"
     android:layout_marginTop="80dp">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:id="@+id/bill_title"
-        android:textSize="25sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/segment_content"
-        android:textSize="20sp"
-        android:background="@color/cardview_light_background"
-        android:padding="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="false"
+        android:background="@color/cardview_light_background"
+        android:id="@+id/frameLayout"
+        android:layout_alignParentEnd="false">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/titleBill"
+                android:autoText="false"
+                android:hint="Texto da bill"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/contentSegment"
+            android:layout_gravity="center_horizontal|bottom"/>
+    </FrameLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="100dp"
         android:id="@+id/recycler_viewSegment"
         android:background="@android:color/transparent"
         android:layout_alignStart="@+id/frameLayout"
         android:layout_alignEnd="@+id/frameLayout"
-        />
+        android:layout_below="@+id/frameLayout"/>
 </RelativeLayout>
