Refactoring fragment view segment

--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -42,13 +42,13 @@
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/contentSegment"
-            android:layout_gravity="center_horizontal|bottom"/>
+            android:layout_below="@+id/titleBill"/>
     </FrameLayout>
 
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:id="@+id/recycler_viewSegment"
         android:background="@android:color/transparent"
         android:layout_alignStart="@+id/frameLayout"
