--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     tools:context="gppmds.wikilegis.view.ViewSegmentFragment"
     android:background="@drawable/background"
-    android:layout_marginTop="80dp">
+    android:layout_marginTop="50dp">
 
     <FrameLayout
         android:layout_width="350dp"
@@ -20,9 +20,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|top"
-            android:layout_marginBottom="10dp">
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -31,18 +31,62 @@
                 android:id="@+id/titleBill"
                 android:autoText="false"
                 android:hint="Texto da bill"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_marginTop="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/contentSegment"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/titleBill"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"/>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/imageViewLike"
+                android:src="@drawable/like"
+                android:layout_marginStart="50dp"
+                android:layout_below="@+id/contentSegment"
+                android:layout_alignParentStart="true" />
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/imageViewDislike"
+                android:src="@drawable/dislike"
+                android:layout_marginStart="130dp"
+                android:layout_alignTop="@+id/imageViewLike"
+                android:layout_toEndOf="@+id/imageViewLike"
+                android:layout_marginBottom="15dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="10"
+                android:id="@+id/textViewNumberLike"
+                android:layout_alignTop="@+id/imageViewLike"
+                android:layout_toEndOf="@+id/imageViewLike"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="30"
+                android:id="@+id/textViewNumberDislike"
+                android:layout_marginStart="10dp"
+                android:layout_alignTop="@+id/textViewNumberLike"
+                android:layout_toEndOf="@+id/imageViewDislike" />
 
         </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/contentSegment"
-            android:layout_below="@+id/titleBill"/>
     </FrameLayout>
 
 
