--- a/app/src/main/res/layout/item_view_segment.xml
+++ b/app/src/main/res/layout/item_view_segment.xml
@@ -1,6 +1,6 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:orientation = "vertical"
 android:layout_marginBottom="1dp"
@@ -9,7 +9,7 @@ android:layout_marginTop="1dp"
 
 
 <android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:id="@+id/frameCardViewSegment"
     android:layout_below="@+id/frameLayout"
@@ -18,17 +18,52 @@ android:layout_marginTop="1dp"
     android:layout_alignEnd="@+id/frameLayout"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textViewSegment"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_below="@+id/frameLayout"
-        android:layout_alignStart="@+id/frameCardViewSegment"
-        android:layout_marginStart="20dp" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text"
+            android:id="@+id/textViewSegment"
+            android:layout_marginTop="29dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/chat"
+            android:id="@+id/imageViewProposal"
+            android:layout_below="@+id/textViewSegment"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="10dp"
+             />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/dislike"
+            android:id="@+id/imageViewDislike"
+            android:layout_marginEnd="100dp"
+            android:layout_alignBottom="@+id/imageViewProposal"
+            android:layout_toStartOf="@+id/imageViewProposal" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/like"
+            android:id="@+id/imageView"
+            android:layout_alignTop="@+id/imageViewDislike"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginBottom="15dp"/>
+
+    </RelativeLayout>
+
 
 
 </android.support.v7.widget.CardView>
