--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -40,6 +40,8 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/contentSegment"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/titleBill"
                 android:layout_centerHorizontal="true"
