--- a/app/src/main/res/layout/item_view_segment.xml
+++ b/app/src/main/res/layout/item_view_segment.xml
@@ -49,7 +49,7 @@ android:layout_marginTop="1dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/dislike"
-            android:id="@+id/imageViewDislike"
+            android:id="@+id/imageViewDislikeCard"
             android:layout_marginEnd="100dp"
             android:layout_alignBottom="@+id/imageViewProposal"
             android:layout_toStartOf="@+id/imageViewProposal" />
@@ -58,8 +58,8 @@ android:layout_marginTop="1dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/like"
-            android:id="@+id/imageView"
-            android:layout_alignTop="@+id/imageViewDislike"
+            android:id="@+id/imageViewLikeCard"
+            android:layout_alignTop="@+id/imageViewDislikeCard"
             android:layout_alignParentStart="true"
             android:layout_marginStart="30dp"
             android:layout_marginBottom="15dp"/>
@@ -68,9 +68,9 @@ android:layout_marginTop="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewNumberLikeCard"
-            android:layout_alignTop="@+id/imageView"
-            android:layout_toEndOf="@+id/imageView"
-            android:layout_alignBottom="@+id/imageView"
+            android:layout_alignTop="@+id/imageViewLikeCard"
+            android:layout_toEndOf="@+id/imageViewLikeCard"
+            android:layout_alignBottom="@+id/imageViewLikeCard"
             android:textSize="27dp"
             android:textIsSelectable="false"
             />
@@ -79,8 +79,8 @@ android:layout_marginTop="1dp"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/imageView"
-            android:layout_alignBottom="@+id/imageView"
+            android:layout_alignTop="@+id/imageViewLikeCard"
+            android:layout_alignBottom="@+id/imageViewLikeCard"
             android:layout_marginStart="190dp"
             android:id="@+id/textViewNumberDislikeCard"
             android:textSize="27dp" />
