--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main_content"
-    tools:context=".view.MainActivity"
-    android:background="@drawable/background">
+<android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
+     xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     xmlns:tools="http://schemas.android.com/tools"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:background="@drawable/background"
+     android:fitsSystemWindows="true"
+     tools:context="gppmds.wikilegis.view.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/main_toolbar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/appbar_padding_top"
         android:background="#83c6c6c6"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_alignParentEnd="true">
-    </android.support.v7.widget.Toolbar>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:id="@+id/relativeLayout">
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-        <Switch
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/switchRelevanteRecente"
-            android:layout_alignBottom="@+id/textViewRelevantes"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:checked="false"
-            android:background="#00ffffff" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#83c6c6c6"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:layout_alignParentEnd="true">
+        </android.support.v7.widget.Toolbar>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Recentes"
-            android:id="@+id/textViewRecentes"
-            android:layout_alignTop="@+id/switchRelevanteRecente"
-            android:layout_toEndOf="@+id/switchRelevanteRecente"
-            android:textColor="@color/abc_secondary_text_material_dark" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:background="#83c6c6c6"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Relevantes"
-            android:id="@+id/textViewRelevantes"
-            android:layout_row="0"
-            android:layout_column="4"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/switchRelevanteRecente"
-            android:textColor="@color/abc_secondary_text_material_dark"
-            android:textColorHint="#ffffff" />
+    </android.support.design.widget.AppBarLayout>
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Abertos"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_alignParentStart="true"
-        android:background="#00ffffff">
-
-        <Switch
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/switchAbertoFechado"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:checked="false"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:textColor="#ffffff" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Encerrados"
-            android:id="@+id/textViewEncerrados"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/switchAbertoFechado"
-            android:textColor="@color/abc_secondary_text_material_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Abertos"
-            android:id="@+id/textViewAbertos"
-            android:layout_row="0"
-            android:layout_column="4"
-            android:layout_alignTop="@+id/textViewEncerrados"
-            android:layout_toStartOf="@+id/switchAbertoFechado"
-            android:layout_marginTop="12dp"
-            android:textColor="@color/abc_secondary_text_material_dark" />
-
-    </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view"
-        android:layout_marginTop="170dp" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
