--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -117,7 +117,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Propostas"
                 android:clickable="false"
-                android:id="@+id/textView"
+                android:id="@+id/textViewProposal"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
                 android:layout_alignParentTop="true"
@@ -129,8 +129,8 @@
                 android:id="@+id/imageViewProposal"
                 android:src="@drawable/chat"
                 android:clickable="false"
-                android:layout_alignBottom="@+id/textView"
-                android:layout_toStartOf="@+id/textView"
+                android:layout_alignBottom="@+id/textViewProposal"
+                android:layout_toStartOf="@+id/textViewProposal"
                 android:layout_marginEnd="30dp" />
         </RelativeLayout>
     </FrameLayout>
