Changing recycle view ids

--- a/app/src/main/res/layout/fragment_list_closed_bills.xml
+++ b/app/src/main/res/layout/fragment_list_closed_bills.xml
@@ -12,6 +12,6 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view"/>
+        android:id="@+id/recycler_view_closed"/>
 
 </LinearLayout>
