Improving spinner layout

--- a/app/src/main/res/layout/fragment_list_closed_bills.xml
+++ b/app/src/main/res/layout/fragment_list_closed_bills.xml
@@ -4,10 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <Spinner
+    <com.jaredrummler.materialspinner.MaterialSpinner
+        android:id="@+id/spinner"
+        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"/>
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
