Creation save button for suggest proposal

--- a/app/src/main/res/layout/fragment_proposal.xml
+++ b/app/src/main/res/layout/fragment_proposal.xml
@@ -26,15 +26,8 @@
             android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="SAVE" />
+            android:text="Salvar alteracao" />
 
-        <Button
-            android:id="@+id/cancel"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Cancel" />
 
     </LinearLayout>
 </LinearLayout>
