--- a/app/src/main/res/layout/fragment_proposal.xml
+++ b/app/src/main/res/layout/fragment_proposal.xml
@@ -6,12 +6,13 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/proposal"
         android:hint="Digite a Proposta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <requestFocus />
+
     </EditText>
 
     <LinearLayout
@@ -27,7 +28,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Salvar alteracao" />
-
-
     </LinearLayout>
+
 </LinearLayout>
