Adding onClickListener in likes/dislikes imageView

--- a/app/src/main/res/layout/fragment_view_segment.xml
+++ b/app/src/main/res/layout/fragment_view_segment.xml
@@ -52,7 +52,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/imageViewLike"
-                android:clickable="false"
+                android:clickable="true"
                 android:src="@drawable/like"
                 android:layout_marginStart="50dp"
                 android:layout_below="@+id/contentSegment"
@@ -64,7 +64,7 @@
                 android:id="@+id/imageViewDislike"
                 android:src="@drawable/dislike"
                 android:layout_marginStart="130dp"
-                android:clickable="false"
+                android:clickable="true"
                 android:layout_alignTop="@+id/imageViewLike"
                 android:layout_toEndOf="@+id/imageViewLike"
                 android:layout_marginBottom="15dp"/>
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_marginStart="5dp"
-                android:clickable="false"
+                android:clickable="true"
                 android:text="10"
                 android:id="@+id/textViewNumberLike"
                 android:layout_alignBottom="@+id/imageViewLike"
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="30"
-                android:clickable="false"
+                android:clickable="true"
                 android:id="@+id/textViewNumberDislike"
                 android:layout_marginStart="5dp"
                 android:layout_alignTop="@+id/textViewNumberLike"
