--- a/app/src/main/res/layout/item_view_segment.xml
+++ b/app/src/main/res/layout/item_view_segment.xml
@@ -43,6 +43,7 @@ android:layout_marginTop="1dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="30dp"
             android:layout_marginTop="10dp"
+            android:clickable="true"
              />
 
         <ImageView
