Adding listeners of optionMenu in actionbar

--- a/app/src/main/res/menu/menu_deslogged.xml
+++ b/app/src/main/res/menu/menu_deslogged.xml
@@ -10,20 +10,12 @@
         android:icon="@drawable/reorder"
         app:showAsAction="always"
         android:orderInCategory="1">
-    </item>
-
-    <item
-        android:id="@+id/action_settigs"
-        android:title="@string/action_settings"
-        android:icon="@drawable/settings"
-        app:showAsAction="always"
-        android:orderInCategory="3">
         <menu>
             <item
-                android:id="@+id/action_filtering"
+                android:id="@+id/action_login"
                 app:showAsAction="always"
                 android:orderInCategory="1"
-                android:title="@string/action_filtering">
+                android:title="@string/action_login">
             </item>
         </menu>
     </item>
