--- a/app/src/main/res/menu/menu_logged.xml
+++ b/app/src/main/res/menu/menu_logged.xml
@@ -10,20 +10,12 @@
         android:icon="@drawable/reorder"
         app:showAsAction="always"
         android:orderInCategory="1">
-    </item>
-
-    <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:icon="@drawable/settings"
-        app:showAsAction="always"
-        android:orderInCategory="3">
         <menu>
             <item
-                android:id="@+id/action_filtering"
+                android:id="@+id/action_logout"
                 app:showAsAction="always"
                 android:orderInCategory="1"
-                android:title="@string/action_filtering">
+                android:title="@string/action_logout">
             </item>
         </menu>
     </item>
@@ -34,14 +26,6 @@
         android:icon="@drawable/search"
         app:showAsAction="always"
         android:orderInCategory="2">
-    </item>
-
-    <item
-        android:id="@+id/action_exit_account"
-        android:title="@string/action_exit_account"
-        android:icon="@drawable/exit_account"
-        app:showAsAction="always"
-        android:orderInCategory="3">
     </item>
 
 </menu>
