--- a/app/src/main/res/menu/menu_deslogged.xml
+++ b/app/src/main/res/menu/menu_deslogged.xml
@@ -17,6 +17,14 @@
                 android:orderInCategory="1"
                 android:title="@string/action_login">
             </item>
+
+            <item
+                android:id="@+id/action_config_deslogged"
+                app:showAsAction="always"
+                android:orderInCategory="2"
+                android:title="@string/action_config">
+            </item>
+
         </menu>
     </item>
 
