--- a/app/src/main/res/layout/item_view_segment.xml
+++ b/app/src/main/res/layout/item_view_segment.xml
@@ -3,9 +3,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:orientation = "vertical"
-android:layout_marginBottom="1dp"
-android:layout_marginTop="1dp"
-    >
+android:layout_marginTop="1px">
 
 
 <android.support.v7.widget.CardView
