--- a/app/src/main/res/layout/fragment_create_comment.xml
+++ b/app/src/main/res/layout/fragment_create_comment.xml
@@ -32,10 +32,10 @@
                         android:textSize="16sp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Sugestão de proposta" />
+                        android:text="Digite seu comentário" />
 
                     <EditText
-                        android:id="@+id/suggestionProposalEditText"
+                        android:id="@+id/commentEditText"
                         style="@style/FullWidthEditText"
                         android:scrollbars="vertical"
                         android:layout_width="match_parent"
@@ -46,14 +46,14 @@
         </android.support.v7.widget.CardView>
 
         <Button
-            android:id="@+id/saveSuggestion"
+            android:id="@+id/saveComment"
             android:background="@drawable/button_green"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:text="Salvar sugestão"/>
+            android:text="Salvar comentário"/>
 
     </LinearLayout>
 
